2005-04-26  Richard Hult  <richard@imendio.com>

	Disable debug and restore the default conf to the normal one.
	
	* gconf/gconf-database.c (gconf_database_schedule_sync): Use a
	define for the sync timeout, and make it re-schedule a new timeout
	if we already have one. This makes the syncing group writes that
	are close in time together.

	* configure.in: Add flag for dbus service files location.
	Bump version. Add some info when running configure on what options
	were choosen.

	Add reliable writes to handle shutdown in the middle of writing a
	set of keys better.
	
	* backends/Makefile.am:
	* backends/gconf-merge-tree.c:
	* backends/markup-write-state.[ch]: Add functions for handling the
	write state.
	
	* backends/markup-backend.c: 
	* backends/markup-tree.c: Use the write state functions and save
	the data to two databases and update the state accordingly.

	* gconf/default.path.in: Mark the writable source in the homedir
	as reliable.

	* gconf/gconf-database.c: (gconf_database_schedule_sync): Use a
	smaller timeout.
	
	* gconf/gconfd.c: Add a define for helping debugging the daemon.

2005-02-10  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version to 2.6.4.3.

	* gconf/gconfd-dbus.c (server_filter_func, gconfd_dbus_init):
	Don't exit on disconnect, handle Disconnect signal and exit
	cleanly.

2005-01-27  Mikael Hallendal  <micke@imendio.com>

	* gconf/gconf-database-dbus.c: (database_filter_func),
	(database_handle_service_owner_changed):
	* gconf/gconf-dbus-utils.h:
	* gconf/gconf-dbus.c: (gconf_dbus_message_filter):
	* gconf/gconfd-dbus.c: (gconfd_dbus_init):
	* gconf/gconfd.c: (main):
	- Updated to work with D-Bus 0.23
	- Note that it still installs the service file in lib/dbus-1.0 instead 
	  of new location in share/
	- Uses ServiceOwnerChanged API now.
	* configure.in:
	- Bumped version to 2.6.4.2

2005-01-17  Mikael Hallendal  <micke@imendio.com>

	* configure.in: Bumped to 2.6.4.1
	* gconf/gconf-database-dbus.c: